[package]
name = "senklot"
version = "0.1.0"
authors = ["takagiy <takagiy.4dev@gmail.com>"]
edition = "2018"

description = "Helping you to stop using the internet"
license = "MIT"
repository = "https://github.com/takagiy/senklot"
readme = "README.md"

[dependencies]
toml = "0.5.6"
daemonize = "0.4.1"
anyhow = "1.0.31"
serde = { version = "1.0.111", features = ["derive"] }
xdg = "2.2.0"
nom = "5.1.1"
chrono = { version = "0.4.11", features = ["serde"] }
bincode = "1.2.1"
ctrlc = { version = "3.1.4", features = ["termination"] }
crossbeam = "0.7.3"
notify = "5.0.0-pre.2"
clap = "2.33.1"
